--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository: "mingshuostat/mingshuostat.github.io"
 author:
   avatar    : "profile.png"
   name      : "Mingshuo Liu/刘明硕"
-  pronouns  : "he/him"
+  pronouns  : "he/him/his"
   bio       : "Email: mshliu at ucdavis.edu"
   location  : # "Davis, CA, USA"
   employer  : "University of California, Davis"
